--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "express": "^4.17.2",
     "pokedex-promise-v2": "^4.0.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0"
