--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "express": "^4.17.2",
+    "file-loader": "^6.2.0",
     "pokedex-promise-v2": "^4.0.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0"
