--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@so-xzen/chat-bot-io-v2",
-  "version": "1.0.0",
-  "description": "Chat Bot IO v2",
+  "name": "@maengdok/chatbot-io",
+  "version": "1.8.5",
+  "description": "Chat Bot IO x Socket.io",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xzen/chat-bot-io-v2.git"
+    "url": "git+https://gitlab.com/Maengdok/chatbot-io.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/xzen/chat-bot-io-v2/issues"
+    "url": "https://gitlab.com/Maengdok/chatbot-io/issues"
   },
-  "homepage": "https://github.com/xzen/chat-bot-io-v2#readme",
+  "homepage": "https://gitlab.com/Maengdok/chatbot-io#readme",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "babel-eslint": "^10.0.3",
@@ -30,7 +30,6 @@
     "eslint-plugin-import": "^2.18.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.13.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
@@ -41,6 +40,7 @@
     "express": "^4.17.2",
     "file-loader": "^6.2.0",
     "pokedex-promise-v2": "^4.0.0",
+    "sass": "^1.49.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0"
   }
